cleanup et plus de perf pour le C et java, chang de l'algo de repulsion + changement passage jogl à openglfx pour + de perf et code moins pénible